--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
   "compilerOptions": {
     "target": "ES2021",                          // Mục tiêu biên dịch (ES2017)
     "module": "commonjs",                        // Kiểu module
-    "strict": true,                              // Bật chế độ kiểm tra nghiêm ngặt
+    // "strict": true,                              // Bật chế độ kiểm tra nghiêm ngặt
     "esModuleInterop": true,                     // Hỗ trợ interop với các module ES
     "skipLibCheck": true,                        // Bỏ qua kiểm tra type cho các thư viện
-    "forceConsistentCasingInFileNames": true,   // Bắt buộc nhất quán về casing của tên file
+    // "forceConsistentCasingInFileNames": true,   // Bắt buộc nhất quán về casing của tên file
     "outDir": "./dist",                          // Thư mục xuất ra sau khi biên dịch
     "rootDir": "./src",                          // Thư mục gốc chứa mã nguồn
     "resolveJsonModule": true,                 // Cho phép nhập khẩu các file JSON
@@ -14,8 +14,8 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "strictNullChecks": false,
-    "noUnusedLocals": false, // Tắt cảnh báo về biến không sử dụng
-    "noUnusedParameters": false, // Tắt cảnh báo về tham số không sử dụng
+    // "noUnusedLocals": false, // Tắt cảnh báo về biến không sử dụng
+    // "noUnusedParameters": false, // Tắt cảnh báo về tham số không sử dụng
   },
   "include": ["src/**/*.ts"],                   // Bao gồm các file TypeScript trong thư mục src
   "exclude": ["node_modules", "**/*.spec.ts"]  // Loại trừ thư mục node_modules và các file test
