--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
